# ignota-dialect

./: .clangd  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: IgnotaDialect.cpp.44F61861A31BB181.idx  IgnotaDialect.h.E55B088B7B36DEB0.idx  IgnotaOps.cpp.A03846DEF167AE35.idx  IgnotaOps.h.7476DF6130EE7F88.idx  IgnotaPasses.cpp.89F445C4BF90B693.idx  IgnotaPasses.h.B31644743712B374.idx  IgnotaTypes.cpp.41CE45491B96FF7A.idx  IgnotaTypes.h.DE7D56A64B6E30F1.idx  ignota-opt.cpp.91AB24F51F9ACE96.idx
ignota-opt/: CMakeLists.txt  ignota-opt.cpp
include/: CMakeLists.txt
include/Dialect/: IgnotaDialect.h
include/Ignota/: CMakeLists.txt  IgnotaDialect.h  IgnotaDialect.td  IgnotaOps.h  IgnotaOps.td  IgnotaPasses.h  IgnotaPasses.td  IgnotaTypes.h  IgnotaTypes.td
include/Ignota/IR/: CMakeLists.txt  IgnotaOps.h  IgnotaOps.td
include/Ignota/Transforms/: CMakeLists.txt  IgnotaPasses.h  IgnotaPasses.td
lib/: CMakeLists.txt
lib/Ignota/: CMakeLists.txt  IgnotaDialect.cpp  IgnotaOps.cpp  IgnotaPasses.cpp  IgnotaTypes.cpp
lib/Ignota/IR/: CMakeLists.txt  IgnotaOps.cpp
lib/Ignota/Transforms/: CMakeLists.txt  PowfRootfOpt.cpp
src/: CMakeLists.txt  ignota-opt.cpp
src/Dialect/: CMakeLists.txt  IgnotaDialect.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Ignota/: ignota-opt.mlir
test/Ignota/IR/: ignota-op-powf.mlir  ignota-op-rootf.mlir
